--- a/index.html
+++ b/index.html
@@ -1,104 +1,115 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ukr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студия</title>
+    <title>Студія</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+        <div class="container header">
+            <nav class="main-nav">
+                <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link current">Студія</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li class="item"><a href="" class="link">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts list">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contacts list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button primary">Заказать услугу</button>
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="button primary">Замовити послугу</button>
         </section>
         <section class="section">
-            <h2 class="hidden">Особенности</h2>
-            <ul class="features-list list">
-                <li>
-                    <h3 class="title">Внимание к деталям</h3>
-                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="title">Пунктуальность</h3>
-                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                    </p>
-
-                </li>
-                <li>
-                    <h3 class="title">Планирование</h3>
-                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">Современные технологии</h3>
-                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="hidden">Особливості</h2>
+                <ul class="features-list list">
+                    <li class="item">
+                        <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="title">ПЛАНУВАННЯ</h3>
+                        <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="work-list list">
-                <li><img src="./images/box1.jpg" alt="Программирование" width="370" height="294"></li>
-                <li><img src="./images/box2.jpg" alt="Адаптация к мобильным версиям" width="370" height="294"></li>
-                <li><img src="./images/box3.jpg" alt="Дизайн" width="370" height="294"></li>
-            </ul>
+        <section class="section work">
+            <div class="container">
+                <h2 class="section-title">Чим ми займаємося</h2>
+                <ul class="work-list list">
+                    <li class="item"><img src="./images/box1.jpg" alt="Программирование" width="370" height="294"></li>
+                    <li class="item"><img src="./images/box2.jpg" alt="Адаптация к мобильным версиям" width="370"
+                            height="294"></li>
+                    <li class="item"><img src="./images/box3.jpg" alt="Дизайн" width="370" height="294"></li>
+                </ul>
+            </div>
         </section>
         <section class="section-team list">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="team-list list">
-                <li>
-                    <img src="./images/product_designer.jpg" alt="Product Designer" width="270" height="260">
-                    <h3 class="title">Игорь Демьяненко</h3>
-                    <p class="text">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/frontend_developer.jpg" alt="Frontend Developer" width="270" height="260">
-                    <h3 class="title">Ольга Репина</h3>
-                    <p class="text">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/marketing.jpg" alt="Marketing" width="270" height="260">
-                    <h3 class="title">Николай Тарасов</h3>
-                    <p class="text">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/ui_designer.jpg" alt="UI Designer" width="270" height="260">
-                    <h3 class="title">Михаил Ермаков</h3>
-                    <p class="text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team-list list">
+                    <li class="item">
+                        <img src="./images/product_designer.jpg" alt="Product Designer" width="270" height="260">
+                        <h3 class="title">Ігор Дем'яненко</h3>
+                        <p class="text">Product Designer</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/frontend_developer.jpg" alt="Frontend Developer" width="270" height="260">
+                        <h3 class="title">Ольга Рєпіна</h3>
+                        <p class="text">Frontend Developer</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/marketing.jpg" alt="Marketing" width="270" height="260">
+                        <h3 class="title">Микола Тарасов</h3>
+                        <p class="text">Marketing</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/ui_designer.jpg" alt="UI Designer" width="270" height="260">
+                        <h3 class="title">Михайло Єрмаков</h3>
+                        <p class="text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
-        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-        <address>
-            <ul class="foot-list list">
-                <li><a href="" class="address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="link">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+            <address>
+                <ul class="foot-list list">
+                    <li class="item"><a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li class="item"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
+                    <li class="item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
