--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         </div>
     </header>
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="button primary">Замовити послугу</button>
+        <section class="section hero">
+            <div class="container">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <button type="button" class="button primary">Замовити послугу</button>
+            </div>
         </section>
         <section class="section">
             <div class="container">
@@ -77,23 +79,31 @@
                 <ul class="team-list list">
                     <li class="item">
                         <img src="./images/product_designer.jpg" alt="Product Designer" width="270" height="260">
-                        <h3 class="title">Ігор Дем'яненко</h3>
-                        <p class="text">Product Designer</p>
+                        <div class="team-border">
+                            <h3 class="title">Ігор Дем'яненко</h3>
+                            <p class="text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/frontend_developer.jpg" alt="Frontend Developer" width="270" height="260">
-                        <h3 class="title">Ольга Рєпіна</h3>
-                        <p class="text">Frontend Developer</p>
+                        <div class="team-border">
+                            <h3 class="title">Ольга Рєпіна</h3>
+                            <p class="text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/marketing.jpg" alt="Marketing" width="270" height="260">
-                        <h3 class="title">Микола Тарасов</h3>
-                        <p class="text">Marketing</p>
+                        <div class="team-border">
+                            <h3 class="title">Микола Тарасов</h3>
+                            <p class="text">Marketing</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/ui_designer.jpg" alt="UI Designer" width="270" height="260">
-                        <h3 class="title">Михайло Єрмаков</h3>
-                        <p class="text">UI Designer</p>
+                        <div class="team-border">
+                            <h3 class="title">Михайло Єрмаков</h3>
+                            <p class="text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
